🚀 Port to Minecraft 26.2.x
Changelog:

- Update the Fabric port to Minecraft 26.2 with Java 25, Fabric Loader 0.19.3, Fabric API 0.154.0, GeckoLib 5.5.3, and Forge Config API Port 26.2.1.

- Adapt 26.2 API changes for bucketable entities, vanilla entity lookups, dye items, dragonfly armor, loot predicates, and grappling hook rendering.

- Configure runtime compatibility for the 26.2.x line and publish releases against the [26.2,26.3) Minecraft range.